[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyconcurrent"
dynamic = ["version"]
description = "pyconcurrent : A Tool to setup tools"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dependencies = []


[tool.hatch.build.targets.wheel]
packages = ["src/pyconcurrent"]
include = [
    "src/pyconcurrent",
    "src/py.typed",
]


[[tool.hatch.envs.all.matrix]]
python = ["3.12", "3.13", "3.14", "3.15"]

[project.urls]
Documentation = "https://github.com/gene-git/pyconcurrent/Docs"
Issues = "https://github.com/gene-git/pyconcurrent/issues"
Source = "https://github.com/gene-git/pyconcurrent"

[tool.hatch.version]
path = "src/pyconcurrent/version.py"

[tool.hatch.envs.default]

[tool.hatch.envs.default.scripts]

[tool.hatch.envs.lint]
detached = true
dependencies = [
]
