[build-system]
requires = ["uv_build>=0.9.21,<=1.0.0"]
build-backend = "uv_build"

[project]
name = "pyconcurrent"
description = "pyconcurrent : A Tool to setup tools"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "GPL-2.0-or-later"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
requires-python = ">=3.13"
version = "2.13.0"
dependencies = []

[tool.uv.build-backend]
module-name = 'pyconcurrent'
module-root = "src"
source-include = [
    '/pyconcurrent',
    '/pyconcurrent/py.typed',
]
source-exclude = [
    ".pytest_cache",
    "__pycache__",
    ".mypy_cache",
]

[project.urls]
Documentation = "https://github.com/gene-git/pyconcurrent/Docs"
Issues = "https://github.com/gene-git/pyconcurrent/issues"
Source = "https://github.com/gene-git/pyconcurrent"

[tool.mypy]
check_untyped_defs = true
follow_untyped_imports = true

